Fix UI for not visible notifications button

--- a/twake/frontend/src/app/components/ScrollHiddenComponents/Notifications.scss
+++ b/twake/frontend/src/app/components/ScrollHiddenComponents/Notifications.scss
@@ -40,6 +40,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  padding: 0px 12px;
 
   &.ant-btn {
     &,
